add the code to the project.

--- a/UtkarshsBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -32,11 +32,11 @@
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Id"></partial>
+                        <partial name="_EditAndBackToListButton" model="Model.Id" />
                     }
                     else
                     {
-                        <partial name="_CreateAndBackToListButton"></partial>
+                        <partial name="_CreateAndBackToListButton" />
                     }
                 </div>
             </div>
