--- a/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -8,9 +8,9 @@
 <form method="post" enctype="multipart/form-data">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if(Model.Product.Id != 0)       // if this value is null it will not display 'Edit Category', change to  0
+        @if (Model.Product.Id != 0)       // if this value is null it will not display 'Edit Category', change to  0
         {
-            // edit 
+            // edit
             title = "Edit Product";
             <input type="hidden" asp-for="Product.Id" />
         }
@@ -98,14 +98,14 @@
                     }
                     else
                     {
-                <div class="row">
-                    <div class="col">
-                        <button type="submit" onclick="return validateInput()" class="btn btn-primary form-control">Create</button>
-                    </div>
-                    <div class="col">
-                        <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
-                    </div>
-                </div>
+                        <div class="row">
+                            <div class="col">
+                                <button type="submit" onclick="return validateInput()" class="btn btn-primary form-control">Create</button>
+                            </div>
+                            <div class="col">
+                                <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
+                            </div>
+                        </div>
                     }
                 </div>
             </div>
@@ -113,6 +113,24 @@
     </div>
 </form>
 
-@section Scripts { 
-<partial name="_ValidationScriptsPartial" />
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdn.tiny.cloud/1/8g7yezr0zvoufdayrwjqbd4g1uoc64g3zz8big48e5q0q4c0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'lists',
+            menubar: 'file edit format'
+        });
+
+        function validateInput() {
+            if (document.getElementById("uploadBox").value = "") {
+                swal("Error", "Please select an image", "error");
+                return false;
+            }
+            return true;
+        }
+    </script>
+
 }
