--- a/UtkarshsBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -14,7 +14,7 @@
         }
 
         <div class="col-12 border-bottom">
-            <h2 class="text-primary">TITLE</h2>
+            <h2 class="text-primary">@title</h2>
         </div>
 
         <div class="col-8 pt-4">
