--- a/UtkarshsBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/CoverType/Upsert.cshtml
@@ -5,26 +5,24 @@
     var title = "Create Cover Type";
 }
 
+
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Id != 0)
         {
-            title = "Edit Cover Type";
+            title = "Edit CoverType";
         }
-
         <div class="col-12 border-bottom">
-            <h2 class="text-primary">TITLE</h2>
+            <h2 class="text-primary"> @title</h2>
         </div>
-
         <div class="col-8 pt-4">
             <div class="form-group row">
                 <div class="col-4">
-                    <!-- Name-->
                     <label asp-for="Name"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Name" class="form-control" placeholder="TEXTBOX FOR NAME"/>
+                    <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
@@ -32,12 +30,10 @@
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Id" />
-                    }
+                        <partial name="_EditAndBackToListButton" model="Model.Id" /> }
                     else
                     {
-                        <partial name="_CreateAndBackToListButton" />
-                    }
+                        <partial name="_CreateAndBackToListButton" />}
                 </div>
             </div>
         </div>
