--- a/UtkarshsBookStore/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/UtkarshsBookStore/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,4 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
