Added the code to remove the error in the UnitOfWork.cs

--- a/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -51,6 +51,7 @@
                 </div>
                 <div class="col-8">
                     <textarea asp-for="Product.Description" class="form-control"></textarea>
+                    <span asp-validation-for="Product.Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -110,12 +111,19 @@
                 </div>
             </div>
         </div>
+        @if (Model.Product.Id != 0)
+        {
+            <div class="col-3 offset-1 pt-4">
+                <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+            </div>
+        }
     </div>
 </form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdn.tiny.cloud/1/8g7yezr0zvoufdayrwjqbd4g1uoc64g3zz8big48e5q0q4c0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <!--<script src="https://cdn.tiny.cloud/1/8g7yezr0zvoufdayrwjqbd4g1uoc64g3zz8big48e5q0q4c0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script> -->
+    <script src="https://cdn.tiny.cloud/1/n94ifuzvl80pchikopiwgz2esrw8n28dwcywvpejlqrregfp/tinymce/5/tinymce.min.js"></script>
 
     <script>
         tinymce.init({
@@ -125,7 +133,7 @@
         });
 
         function validateInput() {
-            if (document.getElementById("uploadBox").value = "") {
+            if (document.getElementById("uploadBox").value == "") {
                 swal("Error", "Please select an image", "error");
                 return false;
             }
