--- a/UtkarshsBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="row">
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<br />
+<div class="row">
     <div class="col-6">
         <h2 class="text-primary">Product List</h2>
     </div>
