--- a/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/UtkarshsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -8,7 +8,7 @@
 <form method="post" enctype="multipart/form-data">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.Product.Id != 0)       // if this value is null it will not display 'Edit Category', change to  0
+        @if (Model.Product.Id != 0)
         {
             // edit
             title = "Edit Product";
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-8">
                     <textarea asp-for="Product.Description" class="form-control"></textarea>
-                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                    <span asp-validation-for="Product.Author" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -61,6 +61,33 @@
                 <div class="col-8">
                     <input asp-for="Product.ListPrice" class="form-control" />
                     <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Product.Price"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Product.Price" class="form-control" />
+                    <span asp-validation-for="Product.Price" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Product.Price50"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Product.Price50" class="form-control" />
+                    <span asp-validation-for="Product.Price50" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Product.Price100"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Product.Price100" class="form-control" />
+                    <span asp-validation-for="Product.Price100" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
