--- a/UtkarshsBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/UtkarshsBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
                             <p class="card-title text-primary">by <b>@product.Author</b></p>
                         </div>
                         <div style="padding-left:5px;">
-                            <p>ISBN: <b class="">@product.ISBN</b></p>
+                            <p>List Price: <strike><b class="">$ @product.ListPrice.ToString("0.00")</b></strike></p>
                         </div>
                         <div style="padding-left:5px;">
-                            <p>List Price: <b class="">$ @product.ListPrice.ToString("0.00")</b></p>
+                            <p style="color:maroon">As low as: <b class="">$@product.Price100.ToString("0.00")</b></p>
                         </div>
                     </div>
                     <div>
